force-app/main/default/objects/ApprovalImages__c/ApprovalImages__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ApprovalImages</label>
</CustomObject>