force-app/main/default/objects/ApprovalImages__c/fields/ApproveButton__c.field-meta.xml
<CustomField>
    <fullName>ApproveButton__c</fullName>
    <label>ApproveButton</label>
    <type>Url</type>
</CustomField>