force-app/main/default/objects/ApprovalImages__c/fields/RejectButton__c.field-meta.xml
<CustomField>
    <fullName>RejectButton__c</fullName>
    <label>RejectButton</label>
    <type>Url</type>
</CustomField>