force-app/main/default/objects/ApprovalImages__c/fields/WM_Logo__c.field-meta.xml
<CustomField>
    <fullName>WM_Logo__c</fullName>
    <label>WM Logo</label>
    <type>Url</type>
</CustomField>